# MASTERCHIP8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: cmake-multi-platform.yml  deploy.yml
python/: chip8_env.py  display_utils.py  find_coordinates.py  main.py  requirements.txt
python/masterchip8/: README.md  __init__.py
python/training/breakout/: train.py
python/training/invaders/: train.py
python/training/pong/: env.py  train.py
python/training/tictactoe/: env.py  train.py
scripts/: update_lib.bat  update_lib.sh
src/: main.cpp
src/EmulatorSrc/: Display.cpp  Display.h  Keyboard.cpp  Keyboard.h  Memory.cpp  Memory.h  Registers.cpp  Registers.h  SuperChip8.cpp  SuperChip8.h  utils.h
src/PythonBindings/: bindings.cpp
src/QtWindows/: EmulatorDisplay.cpp  EmulatorDisplay.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_display.cpp  test_main.cpp  test_memory.cpp  test_registers.cpp  test_superchip8.cpp
